# cu-tep-practice-core

./: .gitignore  README.md  docker-compose.yml  spec-design.md
backend/: Cargo.toml
backend/migrations/: 20240121000000_initial.sql
backend/src/: main.rs
backend/src/api/: ingest.rs  mod.rs
backend/src/core/: accessors.rs  config.rs  education_manager.rs  engines.rs  gemini_client.rs  mod.rs  processor.rs  traits.rs
backend/src/db/: mod.rs
bruno/: Health Check.bru  Ingest Data (Invalid - Missing Content).bru  Ingest Data (Web Source).bru  bruno.json
collector/: go.mod
collector/cmd/crawler/: accessors.go  engine.go  main.go  manager.go
